# RAG-DOC

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rag/: config.py  llm_api.py  main.py  utils.py
src/rag/backend/: main.py  repository.py  router.py  schemas.py
src/rag/core/: chain.py  database.py  ingest.py  pipeline.py
