[build-system]
requires = ["uv_build >= 0.10.8, <0.11.0"]
build-backend = "uv_build"

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "rag"
version = "0.1.0"
authors = [
  {name = "Roman Drovskikh", email = "dorovskih2005@gmail.com"},
]
requires-python = ">= 3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "black>=26.3.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "mypy>=1.19.1",
    "openai>=2.26.0",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.8.0",
    "requests>=2.32.5",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true